--- a/React/HelloWorld/index.html
+++ b/React/HelloWorld/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	  <title>Hello World ReactJs</title>  	
-		<script src="https://fb.me/react-0.14.6.js"></script>     
-		<script src="https://fb.me/react-dom-0.14.6.js"></script>      
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-		<script type="text/babel" src="Method.js"></script>
-	</head>
+<head>
+  <title>Hello World External ReactJs</title>
+
+	  	<script src="https://fb.me/react-0.14.6.js"></script>
+        <script src="https://fb.me/react-dom-0.14.6.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+        <script type="text/babel" src="Method.js"></script>
+</head>
 	<body>
 		<div id="root"></div>	
 	</body>
